feat: insert prices to influxdb

--- a/dev/config/trader/config.yaml
+++ b/dev/config/trader/config.yaml
@@ -23,6 +23,12 @@ redis:
   host: "localhost:6379"
   logger: ""
 
+influxdb:
+  Url: "http://localhost:8086"
+  token: "admin123456"
+  org: "novin-arzesh"
+  bucket: "prices"
+
 mysql:
   username: "admin"
   password: "admin"
