--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -2,11 +2,21 @@ services:
   influxdb:
     image: influxdb:latest
     environment:
-      DOCKER_INFLUXDB_INIT_MODE: setup
-      DOCKER_INFLUXDB_INIT_USERNAME: admin
-      DOCKER_INFLUXDB_INIT_PASSWORD: admin123456
-      DOCKER_INFLUXDB_INIT_ORG: iot
-      DOCKER_INFLUXDB_INIT_BUCKET: prices
-      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: admin123456
+      DOCKER_INFLUXDB_INIT_MODE: "setup"
+      DOCKER_INFLUXDB_INIT_USERNAME: "admin"
+      DOCKER_INFLUXDB_INIT_PASSWORD: "admin123456"
+      DOCKER_INFLUXDB_INIT_ORG: "novin-arzesh"
+      DOCKER_INFLUXDB_INIT_BUCKET: "prices"
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "admin123456"
     ports:
       - "8086:8086"
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - '3000:3000'
+    volumes:
+      - grafana_data:/var/lib/grafana
+volumes:
+    grafana_data: { }
